--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <meta name="keywords" content="">
 
     <title>Emily Rosenberg</title>
-    
+
     <!-- favicon -->
-    <link rel="" href="">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
