--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags -->
-    <meta description="">
-    <meta name="keywords" content="">
-
+    <meta description="Personal website, Web developer, Full stack developer, Web development">
+    <meta name="keywords" content="developer, development, full stack, html, css">
     <title>Emily Rosenberg</title>
-
-    <!-- favicon -->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
