Add name to header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
 <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="name">Emily Rosenberg</h1>
+        </a>
+    </header>
 
     <!-- Nav bar -->
 
