Make header fixed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <a href="index.html">
             <h1 id="name">Emily Rosenberg</h1>
         </a>
+
         <!-- Nav bar -->
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
