--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </a>
 
         <!-- Nav bar -->
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -34,13 +36,13 @@
          </nav>
     </header>
 
-   
-    
-
     <!-- Main content -->
     <main>Main content</main>
 
     <!-- Footer -->
     <footer>Footer</footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/e3e078c624.js" crossorigin="anonymous"></script>
 </body>
 </html>
