Add footer links and icons

--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/emilyannrosenberg/" target="_blank" rel="noopener" aria-label="Find me on LinkedIn (opens in a new tab)"><i class="fa-brands fa-linkedin-in"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/emilyrosenberg" target="_blank" rel="noopener" aria-label="Check out my Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+                <a href="contact.html" target="_blank" rel="noopener" aria-label="Send me a message (opens in a new tab)"><i class="fa-regular fa-paper-plane"></i></a>
+            </li>
+        </ul>
+    </footer>
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/e3e078c624.js" crossorigin="anonymous"></script>
