--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.linkedin.com/in/emilyannrosenberg/" target="_blank" rel="noopener" aria-label="Find me on LinkedIn (opens in a new tab)"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
