--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="https://github.com/emilyrosenberg" target="_blank" rel="noopener" aria-label="Check out my Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
             </li>
             <li>
-                <a href="contact.html" target="_blank" rel="noopener" aria-label="Send me a message (opens in a new tab)"><i class="fa-regular fa-paper-plane"></i></a>
+                <a href="contact.html" target="_blank" aria-label="Send me a message (opens in a new tab)"><i class="fa-regular fa-paper-plane"></i></a>
             </li>
         </ul>
     </footer>
