Add cover text to hero section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <!-- Main content -->
     <main>
         <section id="hero">
+            <div id="cover-text">
+                <h2>Hi! I'm Emily.</h2>
+                <h3>I'm a web developer.</h3>
+            </div>
 
         </section>
     </main>
