--- a/about.html
+++ b/about.html
@@ -37,7 +37,27 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+        <section>
+            <div id="about-heading">
+                <h2>A few facts about me</h2>
+            </div>
+            <div class="about-text">
+                <div >
+                    <p>I am American, originally from Massachusetts (top right corner!)</p>
+                </div>
+                <div>
+                    <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
+                </div>
+                <div>
+                    <p>I entered the tech industry in 2022 and I'm hooked.</p>
+                </div>
+                <div>
+                    <p>I love words, systems, processes, connections, and making life better.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
