Change content in cover text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="hero">
             <div id="cover-text">
                 <h2>Hi! I'm Emily.</h2>
-                <h3>I'm a web developer.</h3>
+                <h3>I'm a junior web developer.</h3>
             </div>
 
         </section>
