--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
     <main>
         <section>
             <div id="about-heading">
-                <h2>A few facts about me</h2>
+                <h2>A few facts about me...</h2>
             </div>
-            <div class="about-text">
-                <div >
-                    <p>I am American, originally from Massachusetts (top right corner!)</p>
+            <div id="about-text">
+                <div>
+                    <p>I am American, originally from Massachusetts - in the top right corner!</p>
                 </div>
                 <div>
                     <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
