--- a/about.html
+++ b/about.html
@@ -56,7 +56,12 @@
                     <p>I love words, systems, processes, connections, and making life better.</p>
                 </div>
             </div>
+            <div id="about-image">
+                <img src="assets/images/profile.jpeg" alt="Emily Rosenberg profile picture">
+            </div>
         </section>
+
+        
     </main>
 
     <!-- Footer -->
