--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,29 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+        <section id="contact">
+            <form id="contact-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2>Let's talk!</h2>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" class="text-input" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" class="text-input" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="email" name="email_address" id="email_address" class="text-input" required>
+                <br>
+                <label for="message">Message</label>
+                <input type="text" name="message" id="message" class="text-input" required>
+                <br>
+                <button type="submit" class="join-button">Send</button>
+
+
+            </form>
+
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
