--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,8 @@
                 <label for="message">Message</label>
                 <input type="text" name="message" id="message" class="text-input" required>
                 <br>
-                <button type="submit" class="join-button">Send</button>
-
-
+                <button type="submit" class="send-button">Send</button>
             </form>
-
         </section>
     </main>
 
