Add content to Contact page

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,10 @@
         <section id="contact">
             <form id="contact-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2>Let's talk!</h2>
+                <div>
+                    <p>Find me on LinkedIn and Github.</p>
+                    <p>Or send me a message.</p>
+                </div>
                 <label for="first_name">First Name</label>
                 <input type="text" name="first_name" id="first_name" class="text-input" required>
                 <br>
