Add initial styles to new content

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,14 @@
             <form id="contact-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2>Let's talk!</h2>
                 <div>
-                    <p>Find me on LinkedIn and Github.</p>
-                    <p>Or send me a message.</p>
+                    <div id="contact-links">
+                        <h3>Find me here.</h3>
+                        <a href="https://www.linkedin.com/in/emilyannrosenberg/" target="_blank" rel="noopener">LinkedIn</a>
+                        <a href="https://github.com/emilyrosenberg" target="_blank" rel="noopener">Github</a>
+                    </div>
+                </div>
+                <div id="message-heading">
+                    <h3>Or send me a message.</h3>
                 </div>
                 <label for="first_name">First Name</label>
                 <input type="text" name="first_name" id="first_name" class="text-input" required>
