Add content to About section

--- a/about.html
+++ b/about.html
@@ -56,6 +56,28 @@
                     <p>I love words, systems, processes, connections, and making life better.</p>
                 </div>
             </div>
+            <div id="experience-heading">
+                <h2>My favorite experiences…</h2>
+            </div>
+            <div id="experience-text">
+                <div>
+                    <p>Navigating complex environments</p>
+                </div>
+                <div>
+                    <p>Proactive problem solving</p>
+                </div>
+                <div>
+                    <p>Collaborating with a team.</p>
+                </div>
+            </div>
+            <div id="cv-heading">
+                <h2>Want to know more?</h2>
+            </div>
+            <div id="cv-text">
+                <div>
+                    <a href="">Here's my CV.</a>
+                </div>
+            </div>
             <div id="about-image">
                 <img src="assets/images/profile.jpeg" alt="Emily Rosenberg profile picture">
             </div>
