Add initial styles to new content in About page

--- a/about.html
+++ b/about.html
@@ -38,45 +38,23 @@
 
     <!-- Main content -->
     <main>
-        <section>
-            <div id="about-heading">
+        <section id="about">
+            <div>
                 <h2>A few facts about me...</h2>
+                <p>I am American, originally from Massachusetts - in the top right corner!</p>
+                <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
+                <p>I entered the tech industry in 2022 and I'm hooked.</p>
+                <p>I love words, systems, processes, connections, and making life better.</p>
             </div>
-            <div id="about-text">
-                <div>
-                    <p>I am American, originally from Massachusetts - in the top right corner!</p>
-                </div>
-                <div>
-                    <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
-                </div>
-                <div>
-                    <p>I entered the tech industry in 2022 and I'm hooked.</p>
-                </div>
-                <div>
-                    <p>I love words, systems, processes, connections, and making life better.</p>
-                </div>
+            <div>
+                <h2>My favorite experiences are…</h2>
+                <p>Navigating complex environments.</p>
+                <p>Proactive problem solving.</p>
+                <p>Collaborating with a team.</p>
             </div>
-            <div id="experience-heading">
-                <h2>My favorite experiences…</h2>
-            </div>
-            <div id="experience-text">
-                <div>
-                    <p>Navigating complex environments</p>
-                </div>
-                <div>
-                    <p>Proactive problem solving</p>
-                </div>
-                <div>
-                    <p>Collaborating with a team.</p>
-                </div>
-            </div>
-            <div id="cv-heading">
+            <div>
                 <h2>Want to know more?</h2>
-            </div>
-            <div id="cv-text">
-                <div>
-                    <a href="">Here's my CV.</a>
-                </div>
+                <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a>
             </div>
             <div id="about-image">
                 <img src="assets/images/profile.jpeg" alt="Emily Rosenberg profile picture">
