Add styles to About content

--- a/about.html
+++ b/about.html
@@ -39,18 +39,33 @@
     <!-- Main content -->
     <main>
         <section id="about">
-            <div>
-                <h2>A few facts about me...</h2>
-                <p>I am American, originally from Massachusetts - in the top right corner!</p>
-                <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
-                <p>I entered the tech industry in 2022 and I'm hooked.</p>
+           
+            <h2>A few facts about me...</h2>
+            <div class="about-text">
+                <div>
+                    <p>I am American, originally from Massachusetts - in the top right corner!</p>
+                </div>
+                <div>
+                    <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
+                </div>
+                <div>
+                    <p>I entered the tech industry in 2022 and I'm hooked.</p>
+                </div>
+                <div>
                 <p>I love words, systems, processes, connections, and making life better.</p>
+                </div>
             </div>
-            <div>
+            <div class="about-text">
                 <h3>My favorite experiences are…</h3>
-                <p>Navigating complex environments.</p>
-                <p>Proactive problem solving.</p>
-                <p>Collaborating with a team.</p>
+                <div>
+                    <p>Navigating complex environments.</p>
+                </div>
+                <div>
+                    <p>Proactive problem solving.</p>
+                </div>
+                <div>
+                    <p>Collaborating with a team.</p>
+                </div>
             </div>
             <div>
                 <h3>Want to know more?</h3>
