--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
     <main>
         <section id="about">
            
+            <div id="first-half">
             <h2>A few facts about me...</h2>
             <div class="about-text">
                 <div>
@@ -55,6 +56,9 @@
                 <p>I love words, systems, processes, connections, and making life better.</p>
                 </div>
             </div>
+            </div>
+
+            <div id="second-half">
             <div class="about-text">
                 <h3>My favorite experiences are…</h3>
                 <div>
@@ -67,13 +71,15 @@
                     <p>Collaborating with a team.</p>
                 </div>
             </div>
-            <div>
+            <div class="about-text">
                 <h3>Want to know more?</h3>
                 <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a>
             </div>
-            <div id="about-image">
+            <div class="about-text" id="about-image">
                 <img src="assets/images/profile.jpeg" alt="Emily Rosenberg profile picture">
             </div>
+            </div>
+
         </section>
 
         
