Edit About content

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 <h2>A few facts about me...</h2>
                 <div class="about-text">
                     <div>
-                        <p>I am American, originally from Massachusetts - in the top right corner!</p>
+                        <p>I am American, originally from Massachusetts - up in the northeast corner!</p>
                     </div>
                     <div>
                         <p>I've lived in Germany for almost six years and I love everyday life in Europe.</p>
