Change message input to textarea to move cursor to top left

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,8 @@
                 <input type="email" name="email_address" id="email_address" class="text-input" required>
                 <br>
                 <label for="message">Message</label>
-                <input type="text" name="message" id="message" class="text-input" required>
+                <!-- Code from lumio on Stack Overflow -->
+                <textarea name="message" id="message" class="text-input" rows="1" cols="50" wrap="physical" required></textarea>
                 <br>
                 <button type="submit" class="send-button">Send</button>
             </form>
