Make contact form simpler

--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
                 <div id="message-heading">
                     <h3>Or send me a message.</h3>
                 </div>
-                <label for="first_name">First Name</label>
+                <label for="first_name">Name</label>
                 <input type="text" name="first_name" id="first_name" class="text-input" required>
                 <br>
-                <label for="last_name">Last Name</label>
+                <!-- <label for="last_name">Last Name</label>
                 <input type="text" name="last_name" id="last_name" class="text-input" required>
-                <br>
-                <label for="email_address">Email Address</label>
+                <br> -->
+                <label for="email_address">Email</label>
                 <input type="email" name="email_address" id="email_address" class="text-input" required>
                 <br>
                 <label for="message">Message</label>
