Make content centered on About and Contact pages

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="about-text">
                     <h3>Want to know more?</h3>
-                    <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a>
+                    <!-- <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a> -->
                 </div>
             </div>
             <div class="about-text" id="about-image">
