Make profile image higher on the page

--- a/about.html
+++ b/about.html
@@ -67,13 +67,14 @@
                         <p>Collaborating with a team.</p>
                     </div>
                 </div>
-                <div class="about-text">
-                    <h3>Want to know more?</h3>
-                    <!-- <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a> -->
-                </div>
             </div>
             <div class="about-text" id="about-image">
                 <img src="assets/images/profile.jpeg" alt="Emily Rosenberg profile picture">
+            </div>
+            <div class="about-text">
+                <h2>Want to know more?</h2>
+                <!-- <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a> -->
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus doloremque officiis voluptas tenetur. Adipisci ex porro eum labore officiis odio facere, necessitatibus at nobis, maxime nihil ipsa, vitae exercitationem iure.</p>
             </div>
         </section>    
     </main>
