--- a/about.html
+++ b/about.html
@@ -73,8 +73,18 @@
             </div>
             <div class="about-text">
                 <h2>Want to know more?</h2>
-                <!-- <a href="https://docs.google.com/document/d/1JQNN1T4gqnC-fxtTOB5h5Qdr7KjbTwX3Wiu_s95lJbs/edit?usp=sharing" target="_blank" rel="noopener" aria-label="Link to my CV (opens in a new tab)">Here's my CV.</a> -->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus doloremque officiis voluptas tenetur. Adipisci ex porro eum labore officiis odio facere, necessitatibus at nobis, maxime nihil ipsa, vitae exercitationem iure.</p>
+                <div>
+                    <p>Diploma in Full Stack Web Development (graduating March 2024) - <span>Code Institute</span></p>
+                </div>
+                <div>
+                    <p>Tech Careers Orientation Course - <span>Digital Career Institute</span></p>
+                </div>
+                <div>
+                    <p>Content and Community Manager - <span>Bunch</span></p>
+                </div>
+                <div>
+                    <p>Editor - <span>The Uniquely Abled Project Newsletter</span></p>
+                </div>
             </div>
         </section>    
     </main>
