--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags -->
-    <meta name="description=" content="Personal website, Web developer, Full stack developer, Web development">
+    <meta name="description" content="Personal website, Web developer, Full stack developer, Web development">
     <meta name="keywords" content="developer, development, full stack, html, css">
     <title>Emily Rosenberg</title>
     <!-- Favicon -->
