Add styles to success page

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,8 @@
     <!-- Main content -->
     <main>
         <section id="contact">
-            <form id="contact-form" method="POST" action="https://formdump.codeinstitute.net">
+            <!-- Removed method="POST" so that the submit button takes the user to a success page instead -->
+            <form id="contact-form" action="success.html">
                 <h2>Let's talk!</h2>
                 <div>
                     <div id="contact-links">
