--- a/success.html
+++ b/success.html
@@ -38,9 +38,11 @@
 
     <!-- Main content -->
     <main>
-        <h2>Thanks so much for your message!</h2>
-        <p>I'll get back to you soon!</p>
-        <a href="index.html">Home</a>
+        <div id="success">
+            <h2>Thanks so much for your message!</h2>
+            <p>I'll get back to you soon!</p>
+            <a href="index.html">Home</a>
+        </div>
     </main> 
 
     <!-- Footer -->
