Add styles to 404 error page

--- a/404.html
+++ b/404.html
@@ -38,9 +38,11 @@
 
     <!-- Main content -->
     <main>
-        <h2>404 page not found</h2>
-        <p>Whoops, we don't have that here!</p>
-        <a href="index.html">Start again</a>
+        <div id="error">
+            <h2>404 page not found</h2>
+            <p>Whoops, we don't have that here!</p>
+            <a href="index.html">Home</a>
+        </div>
     </main> 
 
     <!-- Footer -->
