--- a/success.html
+++ b/success.html
@@ -40,7 +40,7 @@
     <main>
         <div id="success">
             <h2>Thanks so much for your message!</h2>
-            <p>I'll get back to you soon!</p>
+            <p>I'll get back to you soon.</p>
             <a href="index.html">Home</a>
         </div>
     </main> 
